# nuko

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: bot.rs  command.rs  embed.rs  interaction.rs  lib.rs
src/commands/: hey.rs  jisho.rs  mod.rs  xe.rs
src/helpers/: jisho_client.rs  mod.rs  xe_client.rs
