[package]
name = "nuko-bot"
version = "0.1.0"
authors = ["Drew Hutton <drew.hutton@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
serde_repr = "0.1"
thiserror = "1.0"
ed25519-dalek = "1.0.1"
hex = "0.4.2"
reqwest = { version = "0.11.11", features = ["json"] }
async-trait = "0.1.57"
strum = "0.24" 
strum_macros = "0.24"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
chrono = "0.4.22"
rasciigraph = "0.1.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

